[package]
name = "ask-yn"
description = "Terminal utility program to prompt the user to answer yes or no."
version = "0.1.1"
edition = "2024"

keywords = ["confirm", "command-line", "tool"]
categories = ["command-line-utilities"]
homepage = "https://github.com/zfzackfrost/ask-yn"
repository = "https://github.com/zfzackfrost/ask-yn"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
